fixed the text to visible

--- a/style.css
+++ b/style.css
@@ -106,11 +106,11 @@
     height: 20px;
     font-size: 10px;
     font-family: 'lightfont';
+    font-weight: 700;
     padding-block:14px;
     padding-inline: 12px;
     border: 1px solid black;
     margin-bottom: 12px;
-    opacity: 0.3;
   }
   .s_form input[type=password]{
     border-radius: 2px;
@@ -122,7 +122,6 @@
     padding-inline: 12px;
     border: 1px solid black;
     margin-bottom: 6px;
-    opacity: 0.3;
   }
   .details{
     padding-inline:80px;
